Adding react as a dependency

--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "url": "https://github.com/seriallos/flux-minimal-site/issues"
   },
   "homepage": "https://github.com/seriallos/flux-minimal-site",
+  "dependencies": {
+    "react": "^0.13.3"
+  },
   "devDependencies": {
     "babel-core": "^5.4.7",
     "babel-loader": "^5.1.3",
